--- a/README.adoc
+++ b/README.adoc
@@ -10,5 +10,6 @@
 === JSON 파싱된 값을 생성자로 넣기
 * `@JsonCreator` 활용 : link:src/test/java/net/benelog/jackson/JsonCreatorTest.java[JsonCreatorTest.java]
 * `@ConstructorProperties` 활용 : link:src/test/java/net/benelog/jackson/ConstructorPropertiesTest.java[ConstructorPropertiesTest.java]
-* `@AllArgsConstructorTest` 활용 : link:src/test/java/net/benelog/jackson/AllArgsConstructorTest.java[AllArgsConstructorTest.java]
-* `ParameterNameModule` 활용 : link:src/test/java/net/benelog/jackson/ParameterNameModuleTest.java[ParameterNameModuleTest.java]
+** + Lombok : link:src/test/java/net/benelog/jackson/LombokTest.java[LombokTest.java], link:lombok.config[lombok.config]
+* `ParameterNameModule` 활용
+: link:src/test/java/net/benelog/jackson/ParameterNameModuleTest.java[ParameterNameModuleTest.java], link:build.gradle#L28[build.gradle]
